# evasion-arms-race

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: game_theory.md  manifold_experiment.md  synthesis.md  temporal_split.md
docs/paper/: .gitignore  README.md  main.tex  make_figures.py  references.bib
experiments/: arms_race.json  arms_race.py  arms_race_manifold.json  evasion_metrics.json  manifold_attack.json  manifold_attack.py  poisoning.json  realisability.json
scripts/: inspect_header.py  run_ablation.py  run_projection_demo.py  train_baseline.py
src/evasion_arms_race/: __init__.py
src/evasion_arms_race/attack/: __init__.py  blackbox.py  poisoning.py
src/evasion_arms_race/data/: __init__.py  loader.py
src/evasion_arms_race/detector/: __init__.py  ablation.py  baseline.py  robust.py
src/evasion_arms_race/features/: __init__.py  partition.py  projection.py  rule_classifier.py
src/evasion_arms_race/metrics/: __init__.py  evasion.py  report.py
src/evasion_arms_race/validation/: __init__.py  realisability.py
tests/: test_ablation.py  test_blackbox.py  test_detector.py  test_loader.py  test_metrics.py  test_poisoning.py  test_projection_pipeline.py  test_realisability.py  test_robust.py  test_temporal_split.py
